--- a/index.html
+++ b/index.html
@@ -8,17 +8,57 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <!--CSS-->
+    <link href="styles.css" rel="stylesheet">
+
     <title>Kotisivu</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
 
+    <!--Grid-->
+    <div class="container">
+      <div class="row">
+        <div class="col" id="column">
+          column
+        </div>
+        <div class="col" id="column">
+          column
+        </div>
+        <div class="col" id="column">
+          column
+        </div>
+        <div class="col" id="column">
+          column
+        </div>
+        <div class="col" id="column">
+          column
+        </div>
+        <div class="col" id="column">
+          column
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+          Nullam tristique ex ut lorem euismod, nec bibendum tellus accumsan. 
+          Nunc finibus aliquam tortor id volutpat. Donec pellentesque nisl nec ligula suscipit fermentum. 
+          Donec maximus nisl dui. Quisque at tortor congue purus ornare imperdiet vel et quam. 
+          Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; 
+          Nunc non sodales est. Donec eleifend lectus eget orci luctus dignissim. 
+          Praesent sit amet dui non enim elementum interdum in ut diam. 
+          Pellentesque vehicula, nibh sed imperdiet condimentum, justo est ultrices augue, 
+          ut pellentesque quam odio eget nisl. Fusce molestie quam turpis, at rutrum ante aliquam at. 
+          Vivamus vel lacinia felis, id ultrices nibh. Sed mattis elit a leo fermentum pharetra.
+        </div>
+        <div class="col-md-6 align-self-end">
+          tähän tulisi ilmeisesti kuva <!--Bootsrap responsiiviselle kuvalle: <img src="..." class="img-fluid" alt="...">-->
+        </div>
+      </div>
+    </div>
 
-
-
+    <!--Bootstrap Javascript-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-   
   </body>
 </html>
