korjattu alustavaa gridiä

--- a/index.html
+++ b/index.html
@@ -18,27 +18,13 @@
     <!--Grid-->
     <div class="container">
       <div class="row">
-        <div class="col" id="column">
-          column
-        </div>
-        <div class="col" id="column">
-          column
-        </div>
-        <div class="col" id="column">
-          column
-        </div>
-        <div class="col" id="column">
-          column
-        </div>
-        <div class="col" id="column">
-          column
-        </div>
-        <div class="col" id="column">
-          column
+        <div class="col">
+          <h1>Tämä on otsikko</h1>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6">
+          <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
           Nullam tristique ex ut lorem euismod, nec bibendum tellus accumsan. 
           Nunc finibus aliquam tortor id volutpat. Donec pellentesque nisl nec ligula suscipit fermentum. 
@@ -49,9 +35,11 @@
           Pellentesque vehicula, nibh sed imperdiet condimentum, justo est ultrices augue, 
           ut pellentesque quam odio eget nisl. Fusce molestie quam turpis, at rutrum ante aliquam at. 
           Vivamus vel lacinia felis, id ultrices nibh. Sed mattis elit a leo fermentum pharetra.
+          </p>
         </div>
         <div class="col-md-6 align-self-end">
-          tähän tulisi ilmeisesti kuva <!--Bootsrap responsiiviselle kuvalle: <img src="..." class="img-fluid" alt="...">-->
+          tähän tulisi ilmeisesti kuva 
+          <!--Bootsrap responsiiviselle kuvalle: <img src="..." class="img-fluid" alt="...">-->
         </div>
       </div>
     </div>
