Lisätty tekstisisältö ja kuva etusivulle

--- a/index.html
+++ b/index.html
@@ -15,31 +15,29 @@
   </head>
   <body>
 
-    <!--Grid-->
+    <!--Bootstrap Grid-->
     <div class="container">
       <div class="row">
         <div class="col">
-          <h1>Tämä on otsikko</h1>
+          <h1>Tervetuloa!</h1>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6">
           <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-          Nullam tristique ex ut lorem euismod, nec bibendum tellus accumsan. 
-          Nunc finibus aliquam tortor id volutpat. Donec pellentesque nisl nec ligula suscipit fermentum. 
-          Donec maximus nisl dui. Quisque at tortor congue purus ornare imperdiet vel et quam. 
-          Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; 
-          Nunc non sodales est. Donec eleifend lectus eget orci luctus dignissim. 
-          Praesent sit amet dui non enim elementum interdum in ut diam. 
-          Pellentesque vehicula, nibh sed imperdiet condimentum, justo est ultrices augue, 
-          ut pellentesque quam odio eget nisl. Fusce molestie quam turpis, at rutrum ante aliquam at. 
-          Vivamus vel lacinia felis, id ultrices nibh. Sed mattis elit a leo fermentum pharetra.
+            Tältä sivustolta löytyy neljä erilaista tietovisaa, jotka on suunniteltu noin neljäsluokkalaisille.
+          </p>
+          <p>
+            Sivustolla on:
+            <ul>
+              <li>Englanninkielen visa</li>
+              <li>Avaruusaiheinen tietovisa</li>
+              <li>kaksi matikkavisaa</li>
+            </ul>
           </p>
         </div>
         <div class="col-md-6 align-self-end">
-          tähän tulisi ilmeisesti kuva 
-          <!--Bootsrap responsiiviselle kuvalle: <img src="..." class="img-fluid" alt="...">-->
+          <img src="Images/easter-g6a8352177_1920.jpg" class="img-fluid" alt="pupunkorvat">
         </div>
       </div>
     </div>
