Added Font awesome script

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
     <!--CSS-->
     <link href="styles.css" rel="stylesheet">
-
+    
+    <!--Font Awesome-->
+    <script src="https://kit.fontawesome.com/5fd3e95cfd.js" crossorigin="anonymous"></script>
+    
     <title>Kotisivu</title>
   </head>
   <body>
