--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <h1>Tervetuloa!</h1>
+          <h1>Tervetuloa! <i class="fa-solid fa-brain"></i></h1>
         </div>
       </div>
       <div class="row">
