etusivun kuva vaihdettu

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </p>
         </div>
         <div class="col-md-6 align-self-end">
-          <img src="Images/easter-g6a8352177_1920.jpg" class="img-fluid" alt="pupunkorvat">
+          <img src="Images/treasuremap.png" class="img-fluid" alt="aarrekartta">
         </div>
       </div>
     </div>
