--- a/Matikka_JW/matikkaJW.html
+++ b/Matikka_JW/matikkaJW.html
@@ -27,26 +27,108 @@
         </div>     
       </div>
       <div class="row">
+
+        <!-- Tehtävä 1-->
         <div class="col-md-6">
 
-          <h2>Tehtävä <span id="task">0</span></h2>
-            <p>
-              Laske paljonko on: <br>
+          <h2>Tehtävä 1</h2>
+          <p>
+              <h5>Laske paljonko on:</h5> <br>
 
-              <span id="number1">0 </span> <span id="operator"> x </span> <span id="number2"> 0</span> <br>
+              <span id="number1">0 </span> + <span id="number2"> 0</span> <br>
 
-              <input type="number" id="answer"> <button class="btn" type="submit" onclick="calculate()">Tarkista</button>
-            </p>
+              <input type="number" id="answer1"> <button class="btn" type="submit" onclick="calculate1()">Tarkista</button> <br>
+
+              <span id="correctAnswer1"></span>
+              <span id="falseAnswer1"></span>
+          </p>
 
         </div>
+
+        <!-- Tehtävä 2-->
+        <div class="col-md-6">
+
+          <h2>Tehtävä 2</h2>
+          <p>
+              <h5>Laske paljonko on:</h5> <br>
+
+              <span id="number3">0 </span> - <span id="number4"> 0</span> <br>
+
+              <input type="number" id="answer2"> <button class="btn" type="submit" onclick="calculate2()">Tarkista</button> <br>
+
+              <span id="correctAnswer2"></span>
+              <span id="falseAnswer2"></span>
+          </p>
+        </div>
+
+        <!-- Tehtävä 3-->
+        <div class="col-md-6">
+
+          <h2>Tehtävä 3</h2>
+          <p>
+              <h5>Laske paljonko on:</h5> <br>
+
+              <span id="number5">0 </span> x <span id="number6"> 0</span> <br>
+
+              <input type="number" id="answer3"> <button class="btn" type="submit" onclick="calculate3()">Tarkista</button> <br>
+
+              <span id="correctAnswer3"></span>
+              <span id="falseAnswer3"></span>
+          </p>
+        </div>
+
+        <!-- Tehtävä 4-->
+        <div class="col-md-6">
+
+          <h2>Tehtävä 4</h2>
+          <p>
+              <h5>Laske paljonko on:</h5> <br>
+
+              <span id="number7">0 </span> + <span id="number8"> 0</span> + <span id="number9"> 0</span> <br>
+
+              <input type="number" id="answer4"> <button class="btn" type="submit" onclick="calculate4()">Tarkista</button> <br>
+
+              <span id="correctAnswer4"></span>
+              <span id="falseAnswer4"></span>
+          </p>
+        </div>
+
+        <!-- Tehtävä 5-->
+        <div class="col-md-6">
+
+          <h2>Tehtävä 5</h2>
+          <p>
+              <h5>Laske paljonko on:</h5> <br>
+
+              <span id="number10">0 </span> + <span id="number11"> 0</span> - <span id="number12"> 0</span> <br>
+
+              <input type="number" id="answer5"> <button class="btn" type="submit" onclick="calculate5()">Tarkista</button> <br>
+
+              <span id="correctAnswer5"></span>
+              <span id="falseAnswer5"></span>
+          </p>
+        </div>
+
+        <!-- Pisteiden tarkistus -->
+        <div class="col-md-6">
+
+          <p>
+            
+            <button class="btn" type="submit" onclick="rewards()">Laske pisteet</button> <br>
+
+            <span id="rewards"></span>
+
+          </p>
+        </div>
+
       </div>
     </div>  
-  
+
+      <script src="matikkaJW.js"></script>
       <!--Bootstrap Javascript-->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-   
 
 </body>
 </html>
