tiedostot kommentoitu, kuvien nimet lyhennetty

--- a/Englanti_MT/englanti.html
+++ b/Englanti_MT/englanti.html
@@ -216,11 +216,12 @@
                 <p id="results"></p>
             </div>
         </div>
+        <!--Bonusquestion-->
         <div class="row">   
             <div class="col" id="bonusquestion">
-                <h5>Bonus kysymys!</h5>
+                <h5 id="bonusHeader"><i class="fa-solid fa-lightbulb"></i> Bonuskysymys!</h5>
                 <p>Tiedätkö mikä rakennus on alla olevassa kuvassa?</p>
-                <input type="text">
+                <input type="text" id="bonusInput">
                 <button type="button" class="btn btn-primary" id="bonusbutton" onclick="checkBonus()">Tarkista</button>
                 <p id="bonusresult"></p>
             </div>
@@ -228,7 +229,8 @@
         <div class="row">   
             <div class="col" id="image">
                 <!--Bootstrap Responsive Image-->
-                <img src="englanti_Images/big-ben-ge518e6761_1920.jpg" class="img-fluid" alt="Big Ben" id="bigben">
+                <img src="englanti_Images/big-ben.jpg" class="img-fluid" alt="Big Ben" id="bigben">
+                <div class="bottom-right">Pixabay.com</div>
             </div>
         </div>        
     </div>
