lisätty tekstisisältöä etusivulle+tietoja-sivulle

--- a/Tietoja_sivu/tietoja.html
+++ b/Tietoja_sivu/tietoja.html
@@ -32,7 +32,7 @@
                 <ul>
                     <li>Sivun perusrungon bootsrap-pohja ja grid</li>
                     <li>Tietoja-sivun html</li>
-                    <li></li>
+                    <li>Palkintokuvien valitseminen</li>
                     <li></li>
                     <li></li>
                 </ul>
@@ -46,7 +46,7 @@
                 <ul>
                     <li>Wireframe</li>
                     <li>Teeman värien valitseminen</li>
-                    <li></li>
+                    <li>Palkintokuvien valitseminen</li>
                     <li></li>
                     <li></li>
                 </ul>
@@ -60,7 +60,7 @@
                 </p>
                 <h6>Vastuualueet:</h6>
                 <ul>
-                    <li>Bootsrap navbar, header ja footer</li>
+                    <li>Bootsrap: navbar, header ja footer</li>
                     <li></li>
                     <li></li>
                     <li></li>
@@ -75,7 +75,7 @@
                 <h6>Vastuualueet:</h6>
                 <ul>
                     <li>Teeman pohdinta</li>
-                    <li>Sopivien kuvien valinta</li>
+                    <li></li>
                     <li></li>
                     <li></li>
                     <li></li>
