--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/5fd3e95cfd.js" crossorigin="anonymous"></script>
     
-    <title>Kotisivu</title>
+    <title>Tietovisa seikkailu neljäsluokkalaisille</title>
   </head>
   <body>
 
@@ -38,6 +38,8 @@
               <li>kaksi matikkavisaa</li>
             </ul>
           </p>
+          <p>Palkintoina kysymyksiin vastaamisesta voit löytää jopa aarteen.</p>
+          <p>Aloita seikkailusi haluamaltasi sivulta.</p>
         </div>
         <div class="col-md-6 align-self-end">
           <img src="Images/treasuremap.png" class="img-fluid" alt="aarrekartta">
