--- a/Englanti_MT/englanti.html
+++ b/Englanti_MT/englanti.html
@@ -15,7 +15,7 @@
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/5fd3e95cfd.js" crossorigin="anonymous"></script>
 
-    <title>Kotisivu</title>
+    <title>Tietovisa seikkailu neljäsluokkalaisille</title>
   </head>
   <body>
     <!--Bootstrap Grid-->
