--- a/Tietoja_sivu/tietoja.html
+++ b/Tietoja_sivu/tietoja.html
@@ -31,8 +31,8 @@
                 <p class="visa"><i class="fa-solid fa-language"></i> Englanninkielen visa</p>
                 <h6>Vastuualueet:</h6>
                 <ul>
-                    <li><i class="fa-brands fa-bootstrap"></i> Etusivun bootsrap-pohja ja grid</li>
-                    <li><i class="fa-solid fa-circle-info"></i> Tietoja-sivu</li>
+                    <li><i class="fa-brands fa-bootstrap"></i>Etusivun bootsrap-pohja ja grid</li>
+                    <li><i class="fa-solid fa-circle-info"></i>Tietoja-sivu</li>
                     <li><i class="fa-solid fa-award"></i> Palkintokuvien valitseminen</li>
                     <li></li>
                     <li></li>
@@ -40,10 +40,10 @@
             </div> 
             <div class="col">
                 <h5>Jante Wallin</h5>
-                <p class="visa">Matikkavisa 1</p>
+                <p class="visa"><i class="fa-solid fa-calculator"></i> Matikkavisa 1</p>
                 <h6>Vastuualueet:</h6>
                 <ul>
-                    <li><i class="fa-solid fa-table-cells-large"></i> Wireframe</li>
+                    <li><i class="fa-solid fa-table-cells-large"></i>Wireframe</li>
                     <li><i class="fa-solid fa-brush"></i> Teeman värien valitseminen</li>
                     <li><i class="fa-solid fa-award"></i> Palkintokuvien valitseminen</li>
                     <li></li>
@@ -54,10 +54,10 @@
         <div class="row">
             <div class="col">
                 <h5>Sami Vauhkonen</h5>
-                <p class="visa">Matikkavisa 2</p>
+                <p class="visa"><i class="fa-solid fa-circle-plus"></i> Matikkavisa 2</p>
                 <h6>Vastuualueet:</h6>
                 <ul>
-                    <li><i class="fa-brands fa-bootstrap"></i> Bootsrap: navbar, header ja footer</li>
+                    <li><i class="fa-brands fa-bootstrap"></i>Bootsrap: navbar, header ja footer</li>
                     <li></li>
                     <li></li>
                     <li></li>
@@ -66,10 +66,10 @@
             </div> 
             <div class="col">
                 <h5>Henri Virtanen</h5>
-                <p class="visa">Avaruusvisa</p>
+                <p class="visa"><i class="fa-solid fa-rocket"></i> Avaruusvisa</p>
                 <h6>Vastuualueet:</h6>
                 <ul>
-                    <li><i class="fa-solid fa-images"></i> Teeman pohdinta</li>
+                    <li><i class="fa-solid fa-images"></i>Teeman pohdinta</li>
                     <li></li>
                     <li></li>
                     <li></li>
