--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
     
     <title>Kotisivu</title>
   </head>
-  <body>
+  <body class="d-flex flex-column min-vh-100">
+     <!-- Header  -->
+      <header class="text-center border border-dark border-5 bg-light bg-grey mb-5">
+          <h2>Ylätunniste</h2>
+          <h2>joku otsikko</h2>
+      </header>
+      <!-- Header ^ -->
 
     <!--Bootstrap Grid-->
     <div class="container">
@@ -25,6 +31,29 @@
           <h1>Tervetuloa! <i class="fa-solid fa-brain"></i></h1>
         </div>
       </div>
+      <!-- Navigointipalkki   -->
+      <div class="navigaatiopalkki border border-dark border-1">
+        <nav>
+            <ul class="list-unstyled">
+                <li>
+                    <a href="#">Etusivu</a>
+                </li>
+                <li>
+                    <a href="#">Tietovisa 1</a>
+                </li>
+                <li>
+                    <a href="#">Tietovisa 2</a>
+                </li>
+                <li>
+                    <a href="#">Tietovisa 3</a>
+                </li>
+                <li>
+                  <a href="#">Tietoja</a>
+              </li>
+            </ul>
+        </nav>
+    </div> 
+    <!-- Navigointipalkki ^  -->
       <div class="row">
         <div class="col-md-6">
           <p>
@@ -44,7 +73,14 @@
         </div>
       </div>
     </div>
-
+    <footer class="footer bg-grey text-center bg-light border border-dark border-5 mt-auto ">
+      <div class="container">
+        <div class="row">
+        <span>Alatunniste</span>
+        <span>Jotain tekstiä mahdollisesti</span>
+      </div>
+      </div>
+    </footer>
     <!--Bootstrap Javascript-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
