--- a/index.html
+++ b/index.html
@@ -18,12 +18,37 @@
   </head>
   <body class="d-flex flex-column min-vh-100">
      <!-- Header  -->
-      <header class="text-center border border-dark border-5 bg-light bg-grey mb-5">
+      <header class="text-center border border-dark">
           <h2>Ylätunniste</h2>
           <h2>joku otsikko</h2>
       </header>
       <!-- Header ^ -->
-
+      <nav class="navbar navbar-expand-lg navbar-light mb-5 border border-3 border-dark navbar-custom">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Etusivu</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Tietovisa 1</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Tietovisa 2</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Tietovisa 3</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Tietoja</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     <!--Bootstrap Grid-->
     <div class="container">
       <div class="row">
@@ -31,29 +56,6 @@
           <h1>Tervetuloa! <i class="fa-solid fa-gem"></i></h1>
         </div>
       </div>
-      <!-- Navigointipalkki   -->
-      <div class="navigaatiopalkki border border-dark border-1">
-        <nav>
-            <ul class="list-unstyled">
-                <li>
-                    <a href="#">Etusivu</a>
-                </li>
-                <li>
-                    <a href="#">Tietovisa 1</a>
-                </li>
-                <li>
-                    <a href="#">Tietovisa 2</a>
-                </li>
-                <li>
-                    <a href="#">Tietovisa 3</a>
-                </li>
-                <li>
-                  <a href="#">Tietoja</a>
-              </li>
-            </ul>
-        </nav>
-    </div> 
-    <!-- Navigointipalkki ^  -->
       <div class="row">
         <div class="col-md-6">
           <p>
@@ -75,7 +77,7 @@
         </div>
       </div>
     </div>
-    <footer class="footer bg-grey text-center bg-light border border-dark border-5 mt-auto ">
+    <footer class="footer text-center border border-dark border-5 mt-auto">
       <div class="container">
         <div class="row">
         <span>Alatunniste</span>
