--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <body class="d-flex flex-column min-vh-100">
      <!-- Header  -->
       <header class="text-center border border-dark">
-          <h2>Ylätunniste</h2>
-          <h2>joku otsikko</h2>
+          <img src="Images/prizes.png" alt="palkinnot" id="headerimage">
+          <h2>Tietovisa seikkailu neljäsluokkalaisille</h2>
       </header>
       <!-- Header ^ -->
       <nav class="navbar navbar-expand-lg navbar-light mb-5 border border-3 border-dark navbar-custom">
