--- a/Englanti_MT/englanti.html
+++ b/Englanti_MT/englanti.html
@@ -10,14 +10,45 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!--CSS-->
-    <link href="/Englanti_MT/englanti.css" rel="stylesheet">
+    <link href="englanti.css" rel="stylesheet">
 
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/5fd3e95cfd.js" crossorigin="anonymous"></script>
 
     <title>Tietovisa seikkailu neljäsluokkalaisille</title>
   </head>
-  <body>
+    <body class="d-flex flex-column min-vh-100">
+        <!--Header-->
+         <header class="text-center border border-dark">
+             <h2>Tietovisa seikkailu neljäsluokkalaisille</h2>
+         </header>
+         <!--Navbar-->
+         <nav class="navbar navbar-expand-lg navbar-light mb-5 border border-3 border-dark navbar-custom">
+           <div class="container-fluid">
+             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span>
+             </button>
+             <div class="collapse navbar-collapse" id="navbarNav">
+               <ul class="navbar-nav">
+                 <li class="nav-item">
+                   <a class="nav-link active" aria-current="page" href="/index.html">Etusivu</a>
+                 </li>
+                 <li class="nav-item">
+                   <a class="nav-link" href="/Englanti_MT/englanti.html">Englanninkielen visa</a>
+                 </li>
+                 <li class="nav-item">
+                   <a class="nav-link" href="/Matikka_JW/matikkaJW.html">Matikkavisa 1</a>
+                 </li>
+                 <li class="nav-item">
+                   <a class="nav-link" href="/Matikka_SV/matikkaSV.html">Matikkavisa 2</a>
+                 </li>
+                 <li class="nav-item">
+                   <a class="nav-link" href="/Tietoja_sivu/tietoja.html">Tietoja</a>
+                 </li>
+               </ul>
+             </div>
+           </div>
+         </nav>
     <!--Bootstrap Grid-->
     <div class="container">
         <div class="row">
@@ -31,8 +62,7 @@
                 <ul>
                     <li>Tehtävässä on viisi kysymystä.</li> 
                     <li>Kaikilla kysymyksillä on neljä vastausvaihtoehtoa.</li>
-                    <li>Valitse mielestäsi oikea vaihtoehto klikkaamalla sen edessä olevaa ympyrää.</li>
-                    <li>Et voi enää muuttaa vastausta valittuasi sen.</li>
+                    <li>Valitse mielestäsi oikea vaihtoehto klikkaamalla sitä. Et voi enää muuttaa vastausta valittuasi sen.</li>
                     <li>Mikäli vastauksesi meni väärin, näet oikean vastauksen korostettuna.</li>
                     <li>Kun olet vastannut kaikkiin kysymyksiin, paina "Tarkista pisteet!" niin näet kokonaistuloksesi.</li>
                 </ul>
@@ -55,7 +85,7 @@
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="flexRadioDefault1" id="flexRadioDefault2" onclick="answerCheck1()">
                     <label class="form-check-label" for="flexRadioDefault2" id="question1Answer2">
-                        Turn left from the next crosroads and follow the street to the end.
+                        Turn left from the next crossroads and follow the street to the end.
                     </label>
                 </div>
                 <div class="form-check">
@@ -234,7 +264,16 @@
             </div>
         </div>        
     </div>
-    <script src="/Englanti_MT/englanti.js"></script>
+    <!--Footer-->
+    <footer class="footer text-center border border-dark border-5 mt-auto">
+        <div class="container">
+          <div class="row">
+          <span>Milla Tuppurainen</span>
+        </div>
+        </div>
+      </footer>
+    <!--Javascript-->
+    <script src="englanti.js"></script>
     <!--Bootstrap Javascript-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
