--- a/Englanti_MT/englanti.html
+++ b/Englanti_MT/englanti.html
@@ -20,6 +20,7 @@
     <body class="d-flex flex-column min-vh-100">
         <!--Header-->
          <header class="text-center border border-dark">
+             <img src="../Images/prizes.png" alt="palkinnot" id="headerimage">
              <h2>Tietovisa seikkailu neljäsluokkalaisille</h2>
          </header>
          <!--Navbar-->
@@ -31,19 +32,19 @@
              <div class="collapse navbar-collapse" id="navbarNav">
                <ul class="navbar-nav">
                  <li class="nav-item">
-                   <a class="nav-link active" aria-current="page" href="/index.html">Etusivu</a>
+                   <a class="nav-link active" aria-current="page" href="../index.html">Etusivu</a>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="/Englanti_MT/englanti.html">Englanninkielen visa</a>
+                   <a class="nav-link" href="englanti.html">Englanninkielen visa</a>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="/Matikka_JW/matikkaJW.html">Matikkavisa 1</a>
+                   <a class="nav-link" href="../Matikka_JW/matikkaJW.html">Matikkavisa 1</a>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="/Matikka_SV/matikkaSV.html">Matikkavisa 2</a>
+                   <a class="nav-link" href="../Matikka_SV/matikkaSV.html">Matikkavisa 2</a>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="/Tietoja_sivu/tietoja.html">Tietoja</a>
+                   <a class="nav-link" href="../Tietoja_sivu/tietoja.html">Tietoja</a>
                  </li>
                </ul>
              </div>
