--- a/Tietoja_sivu/tietoja.html
+++ b/Tietoja_sivu/tietoja.html
@@ -17,12 +17,12 @@
     <title>Tietovisa seikkailu neljäsluokkalaisille</title>
   </head>
     <body class="d-flex flex-column min-vh-100">
-        <!-- Header  -->
+        <!--Header-->
          <header class="text-center border border-dark">
             <img src="../Images/prizes.png" alt="palkinnot" id="headerimage">
             <h2>Tietovisa seikkailu neljäsluokkalaisille</h2>
          </header>
-         <!-- Header ^ -->
+         <!--Navbar-->
          <nav class="navbar navbar-expand-lg navbar-light mb-5 border border-3 border-dark navbar-custom">
            <div class="container-fluid">
              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,19 +31,19 @@
              <div class="collapse navbar-collapse" id="navbarNav">
                <ul class="navbar-nav">
                  <li class="nav-item">
-                   <a class="nav-link active" aria-current="page" href="/index.html">Etusivu</a>
+                   <a class="nav-link active" aria-current="page" href="../index.html">Etusivu</a>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="/Englanti_MT/englanti.html">Englanninkielen visa</a>
+                   <a class="nav-link" href="../Englanti_MT/englanti.html">Englanninkielen visa</a>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="/Matikka_JW/matikkaJW.html">Matikkavisa 1</a>
+                   <a class="nav-link" href="../Matikka_JW/matikkaJW.html">Matikkavisa 1</a>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="/Matikka_SV/matikkaSV.html">Matikkavisa 2</a>
+                   <a class="nav-link" href="../Matikka_SV/matikkaSV.html">Matikkavisa 2</a>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="/Tietoja_sivu/tietoja.html">Tietoja</a>
+                   <a class="nav-link" href="tietoja.html">Tietoja</a>
                  </li>
                </ul>
              </div>
