--- a/Matikka_JW/matikkaJW.html
+++ b/Matikka_JW/matikkaJW.html
@@ -23,7 +23,7 @@
     <div class="container">
       <div class="row">
         <div class="col">
-            <h1>Tervetuloa matikkavisaan!</h1>
+            <h1>Tervetuloa matikkavisaan! <i class="fa-solid fa-calculator"></i> </h1>
         </div>     
       </div>
       <div class="row">
