--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
                 <a class="nav-link active" aria-current="page" href="#">Etusivu</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Tietovisa 1</a>
+                <a class="nav-link" href="./Englanti_MT/englanti.html">Englanti-visa</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Tietovisa 2</a>
+                <a class="nav-link" href="./Matikka_JW/matikkaJW.html">Matikkavisa 1</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Tietovisa 3</a>
+                <a class="nav-link" href="./Matikka_SV/matikkaSV.html">Matikkavisa 2</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Tietoja</a>
+                <a class="nav-link" href="./Tietoja_sivu/tietoja.html">Tietoja</a>
               </li>
             </ul>
           </div>
@@ -59,14 +59,13 @@
       <div class="row">
         <div class="col-md-6">
           <p>
-            Tältä sivustolta löytyy neljä erilaista tietovisaa, jotka on suunniteltu noin neljäsluokkalaisille.
+            Tältä sivustolta löytyy kolme erilaista tietovisaa, jotka on suunniteltu noin neljäsluokkalaisille.
           </p>
           <p>
             Sivustolla on:
             <ul>
               <li>Englanninkielen visa</li>
-              <li>Avaruusaiheinen tietovisa</li>
-              <li>kaksi matikkavisaa</li>
+              <li>Kaksi matikkavisaa</li>
             </ul>
           </p>
           <p>Palkintoina kysymyksiin vastaamisesta voit löytää jopa aarteen.</p>
