--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
     <footer class="footer text-center border border-dark border-5 mt-auto">
       <div class="container">
         <div class="row">
-        <span>Alatunniste</span>
-        <span>Jotain tekstiä mahdollisesti</span>
+        <span>Milla Tuppurainen, Sami Vauhkonen, Jante Wallin</span>
       </div>
       </div>
     </footer>
