--- a/Matikka_JW/matikkaJW.html
+++ b/Matikka_JW/matikkaJW.html
@@ -145,19 +145,17 @@
 
         <!-- Pisteiden tarkistus -->
         <div class="col-md-6">
-
           <p>
-            
             <button class="btn" type="submit" onclick="rewards()">Laske pisteet</button> <br>
-
+            <span id="points"></span>
             <span id="rewards"></span>
-
           </p>
         </div>
 
       </div>
     </div>  
 
+    <!-- Footer -->
     <footer class="footer text-center border border-dark border-5 mt-auto">
       <div class="container">
         <div class="row">
