--- a/Tietoja_sivu/tietoja.html
+++ b/Tietoja_sivu/tietoja.html
@@ -77,7 +77,7 @@
                     <li><i class="fa-solid fa-table-cells-large"></i>Wireframe</li>
                     <li><i class="fa-solid fa-brush"></i> Teeman värien valitseminen</li>
                     <li><i class="fa-solid fa-award"></i> Palkintojen valitseminen</li>
-                    <li></li>
+                    <li><i class="fa-solid fa-check-double"></i>Muotoilujen hienosäätöä</li>
                     <li></li>
                 </ul>
             </div>
