tietoja- ja etu-sivua vielä korjailtu

--- a/Englanti_MT/englanti.html
+++ b/Englanti_MT/englanti.html
@@ -15,13 +15,13 @@
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/5fd3e95cfd.js" crossorigin="anonymous"></script>
 
-    <title>Tietovisa seikkailu neljäsluokkalaisille</title>
+    <title>Tietovisaseikkailu neljäsluokkalaisille</title>
   </head>
     <body class="d-flex flex-column min-vh-100">
         <!--Header-->
          <header class="text-center border border-dark">
              <img src="../Images/prizes.png" alt="palkinnot" id="headerimage">
-             <h2>Tietovisa seikkailu neljäsluokkalaisille</h2>
+             <h1>Tietovisaseikkailu neljäsluokkalaisille</h1>
          </header>
          <!--Navbar-->
          <nav class="navbar navbar-expand-lg navbar-light mb-5 border border-3 border-dark navbar-custom">
@@ -35,7 +35,7 @@
                    <a class="nav-link active" aria-current="page" href="../index.html">Etusivu</a>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="englanti.html">Englanninkielen visa</a>
+                   <a class="nav-link" href="englanti.html">Englanti-visa</a>
                  </li>
                  <li class="nav-item">
                    <a class="nav-link" href="../Matikka_JW/matikkaJW.html">Matikkavisa 1</a>
@@ -237,14 +237,14 @@
                 <p id="argument5"></p>
             </div>
             <div class="col-sm-4 col-md-2">
-                <p id="answeredQuestions"></p>
+                <p class="rounded" id="answeredQuestions"></p>
             </div>
             <div class="col-sm-4 col-md-2">
                 <!--Bootstrap Button-->
                 <button type="button" class="btn btn-primary" id="engbutton" onclick="checkPoints()">Katso pisteet!</button>
             </div>
             <div class="col-sm-4 col-md-2">
-                <p id="results"></p>
+                <p class="rounded" id="results"></p>
             </div>
         </div>
         <!--Bonusquestion-->
@@ -260,7 +260,7 @@
         <div class="row">   
             <div class="col" id="image">
                 <!--Bootstrap Responsive Image-->
-                <img src="englanti_Images/big-ben.jpg" class="img-fluid" alt="Big Ben" id="bigben">
+                <img src="englanti_Images/big-ben.jpg" class="img-fluid img-thumbnail rounded" alt="Big Ben" id="bigben">
                 <div class="bottom-right">Pixabay.com</div>
             </div>
         </div>        
@@ -269,7 +269,7 @@
     <footer class="footer text-center border border-dark border-5 mt-auto">
         <div class="container">
           <div class="row">
-          <span>Milla Tuppurainen</span>
+          <span>@2022 Milla Tuppurainen</span>
         </div>
         </div>
       </footer>
