--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--Font Awesome-->
     <script src="https://kit.fontawesome.com/5fd3e95cfd.js" crossorigin="anonymous"></script>
     
-    <title>Tietovisa seikkailu neljäsluokkalaisille</title>
+    <title>Tietovisaseikkailu neljäsluokkalaisille</title>
   </head>
   <body class="d-flex flex-column min-vh-100">
      <!-- Header  -->
@@ -71,7 +71,7 @@
           <p>Palkintoina kysymyksiin vastaamisesta voit löytää jopa aarteen.</p>
           <p>Aloita seikkailusi haluamaltasi sivulta.</p>
         </div>
-        <div class="col-md-6 align-self-end">
+        <div class="col-md-6">
           <img src="Images/treasuremap.png" class="img-fluid" alt="aarrekartta">
         </div>
       </div>
@@ -79,7 +79,7 @@
     <footer class="footer text-center border border-dark border-5 mt-auto">
       <div class="container">
         <div class="row">
-        <span>Milla Tuppurainen, Sami Vauhkonen, Jante Wallin</span>
+        <span>@2022 Milla Tuppurainen, Sami Vauhkonen, Jante Wallin</span>
       </div>
       </div>
     </footer>
