--- a/Tietoja_sivu/tietoja.html
+++ b/Tietoja_sivu/tietoja.html
@@ -34,7 +34,7 @@
                    <a class="nav-link active" aria-current="page" href="../index.html">Etusivu</a>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="../Englanti_MT/englanti.html">Englanninkielen visa</a>
+                   <a class="nav-link" href="../Englanti_MT/englanti.html">Englanti-visa</a>
                  </li>
                  <li class="nav-item">
                    <a class="nav-link" href="../Matikka_JW/matikkaJW.html">Matikkavisa 1</a>
@@ -59,7 +59,7 @@
         <div class="row">
             <div class="col">
                 <h5>Milla Tuppurainen</h5>
-                <p class="visa"><i class="fa-solid fa-language"></i> Englanninkielen visa</p>
+                <p class="visa"><i class="fa-solid fa-language"></i> Englanti-visa</p>
                 <h6>Vastuualueet:</h6>
                 <ul>
                     <li><i class="fa-brands fa-bootstrap"></i>Etusivun bootsrap-pohja ja grid</li>
@@ -89,7 +89,7 @@
                 <h6>Vastuualueet:</h6>
                 <ul>
                     <li><i class="fa-brands fa-bootstrap"></i>Bootsrap: navbar, header ja footer</li>
-                    <li></li>
+                    <li><i class="fa-solid fa-paint-roller"></i>Etusivun css</li>
                     <li></li>
                     <li></li>
                     <li></li>
@@ -100,7 +100,7 @@
     <footer class="footer text-center border border-dark border-5 mt-auto">
         <div class="container">
           <div class="row">
-          <span>Milla Tuppurainen, Sami Vauhkonen, Jante Wallin</span>
+          <span>@2022 Milla Tuppurainen, Sami Vauhkonen, Jante Wallin</span>
         </div>
         </div>
     </footer>
