--- a/Matikka_JW/matikkaJW.html
+++ b/Matikka_JW/matikkaJW.html
@@ -159,7 +159,7 @@
     <footer class="footer text-center border border-dark border-5 mt-auto">
       <div class="container">
         <div class="row">
-        <span>Jante Wallin</span>
+        <span>@2022 Jante Wallin</span>
       </div>
       </div>
     </footer>
