linkki lisätty etusivun kuvaan

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
           <p>Aloita seikkailusi haluamaltasi sivulta.</p>
         </div>
         <div class="col-md-6">
-          <img src="Images/treasuremap.png" class="img-fluid" alt="aarrekartta">
+          <img src="Images/treasuremap.png" class="img-fluid" alt="aarrekartta"> <br>
+          <p><a href="http://pixabay.com" target="_blank">Kuva: Pixabay</a></p>
         </div>
       </div>
     </div>
