linkit lisätty palkintokuviin

--- a/Matikka_JW/matikkaJW.html
+++ b/Matikka_JW/matikkaJW.html
@@ -138,7 +138,7 @@
 
               <input type="number" id="answer5"> <button class="btn" type="submit" onclick="calculate5()">Tarkista</button> <br>
 
-              <span id="correctAnswer5"></span>
+              <span id="correctAnswer5"></span>               
               <span id="falseAnswer5"></span>
           </p>
         </div>
@@ -148,7 +148,8 @@
           <p>
             <button class="btn" type="submit" onclick="rewards()">Laske pisteet</button> <br>
             <span id="points"></span>
-            <span id="rewards"></span>
+            <span id="rewards"></span> <br>
+            <a href="http://pixabay.com" target="_blank" id="linkOfPicture">Kuva: Pixabay</a>
           </p>
         </div>
 
