--- a/Tietoja_sivu/tietoja.html
+++ b/Tietoja_sivu/tietoja.html
@@ -31,7 +31,7 @@
              <div class="collapse navbar-collapse" id="navbarNav">
                <ul class="navbar-nav">
                  <li class="nav-item">
-                   <a class="nav-link active" aria-current="page" href="../index.html">Etusivu</a>
+                   <a class="nav-link" aria-current="page" href="../index.html">Etusivu</a>
                  </li>
                  <li class="nav-item">
                    <a class="nav-link" href="../Englanti_MT/englanti.html">Englanti-visa</a>
@@ -43,7 +43,7 @@
                    <a class="nav-link" href="../Matikka_SV/matikkaSV.html">Matikkavisa 2</a>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="tietoja.html">Tietoja</a>
+                   <a class="nav-link active" href="tietoja.html">Tietoja</a>
                  </li>
                </ul>
              </div>
