--- a/Matikka_JW/matikkaJW.html
+++ b/Matikka_JW/matikkaJW.html
@@ -34,13 +34,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="../index.html">Etusivu</a>
+            <a class="nav-link" href="../index.html">Etusivu</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../Englanti_MT/englanti.html">Englanninkielen visa</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../Matikka_JW/matikkaJW.html">Matikkavisa 1</a>
+            <a class="nav-link active" aria-current="page" href="../Matikka_JW/matikkaJW.html">Matikkavisa 1</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="../Matikka_SV/matikkaSV.html">Matikkavisa 2</a>
