--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Etusivu</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Etusivu</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./Englanti_MT/englanti.html">Englanti-visa</a>
