--- a/Tietoja_sivu/tietoja.html
+++ b/Tietoja_sivu/tietoja.html
@@ -57,19 +57,19 @@
             </div>
         </div>
         <div class="row">
-            <div class="col">
+            <div class="col-sm-12 col-md-6">
                 <h5>Milla Tuppurainen</h5>
                 <p class="visa"><i class="fa-solid fa-language"></i> Englanti-visa</p>
                 <h6>Vastuualueet:</h6>
                 <ul>
-                    <li><i class="fa-brands fa-bootstrap"></i>Etusivun bootsrap-pohja ja grid</li>
+                    <li><i class="fa-brands fa-bootstrap"></i>Etusivun Bootstrap-pohja ja grid</li>
                     <li><i class="fa-solid fa-circle-info"></i>Tietoja-sivu</li>
                     <li><i class="fa-solid fa-award"></i> Palkintojen valitseminen</li>
                     <li><i class="fa-solid fa-image"></i>Header-kuvan teko</li>
                     <li></li>
                 </ul>
             </div> 
-            <div class="col">
+            <div class="col-sm-12 col-md-6">
                 <h5>Jante Wallin</h5>
                 <p class="visa"><i class="fa-solid fa-calculator"></i> Matikkavisa 1</p>
                 <h6>Vastuualueet:</h6>
@@ -88,7 +88,7 @@
                 <p class="visa"><i class="fa-solid fa-circle-plus"></i> Matikkavisa 2</p>
                 <h6>Vastuualueet:</h6>
                 <ul>
-                    <li><i class="fa-brands fa-bootstrap"></i>Bootsrap: navbar, header ja footer</li>
+                    <li><i class="fa-brands fa-bootstrap"></i>Bootstrap: navbar, header ja footer</li>
                     <li><i class="fa-solid fa-paint-roller"></i>Etusivun css</li>
                     <li></li>
                     <li></li>
