--- a/Englanti_MT/englanti.html
+++ b/Englanti_MT/englanti.html
@@ -32,10 +32,10 @@
              <div class="collapse navbar-collapse" id="navbarNav">
                <ul class="navbar-nav">
                  <li class="nav-item">
-                   <a class="nav-link active" aria-current="page" href="../index.html">Etusivu</a>
+                   <a class="nav-link" aria-current="page" href="../index.html">Etusivu</a>
                  </li>
                  <li class="nav-item">
-                   <a class="nav-link" href="englanti.html">Englanti-visa</a>
+                   <a class="nav-link active" href="englanti.html">Englanti-visa</a>
                  </li>
                  <li class="nav-item">
                    <a class="nav-link" href="../Matikka_JW/matikkaJW.html">Matikkavisa 1</a>
