--- a/Matikka_SV/matikkaSV.html
+++ b/Matikka_SV/matikkaSV.html
@@ -50,10 +50,10 @@
         </div>
       </nav>
     <!--Bootstrap Grid-->
-    <div class="container border">
+    <div class="container border bg-grey bg-light">
       <div class="row">
         <div class="col">
-          <h2>Matikkavisa #2</i></h2>
+          <h1 class="mb-5 fonttivaihtoon">Matikkavisa #2</h1>
         </div>
       </div>
       <div class="row  mb-5">
