--- a/Matikka_JW/matikkaJW.html
+++ b/Matikka_JW/matikkaJW.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="../index.html">Etusivu</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../Englanti_MT/englanti.html">Englanninkielen visa</a>
+            <a class="nav-link" href="../Englanti_MT/englanti.html">Englanti-visa</a>
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="../Matikka_JW/matikkaJW.html">Matikkavisa 1</a>
