--- a/Matikka_SV/matikkaSV.html
+++ b/Matikka_SV/matikkaSV.html
@@ -57,23 +57,23 @@
         </div>
       </div>
       <div class="row  mb-5">
-        <div class="col-md-6 border border-1 mb-5">Kysymys 1 <span id="eka">H</span> + <span id="toka">L</span>
-        <label for="input"><input id="vastaus" type="value"></label>
+        <div class="col-md-6 border border-1 mb-5">Kysymys 1 =>  <span id="eka">H</span> + <span id="toka">L</span>
+        <label for="input"><input id="vastaus" name="vastaus" type="value"></label>
         </div>
-        <div class="col-md-6 border border-1 mb-5">Kysymys 2 <span id="eka2">H</span> - <span id="toka2">L</span>
-            <label for="input"><input id="vastaus2" type="value"></label>
+        <div class="col-md-6 border border-1 mb-5">Kysymys 2 =>  <span id="eka2">H</span> - <span id="toka2">L</span>
+            <label for="input"><input id="vastaus2" name="vastaus2" type="value"></label>
         </div>
-        <div class="col-md-6 border border-1 mb-5">Kysymys 3 <span id="eka3">H</span> / <span id="toka3">L</span>
-            <label for="input"><input id="vastaus3" type="value"></label>
+        <div class="col-md-6 border border-1 mb-5">Kysymys 3 =>  <span id="eka3">H</span> / <span id="toka3">L</span>
+            <label for="input"><input id="vastaus3" name="vastaus3" type="value"></label>
         </div>
-        <div class="col-md-6 border border-1 mb-5">Kysymys 4 <span id="eka4">H</span> * <span id="toka4">L</span>
-            <label for="input"><input id="vastaus4" type="value"></label>
+        <div class="col-md-6 border border-1 mb-5">Kysymys 4 =>  <span id="eka4">H</span> * <span id="toka4">L</span>
+            <label for="input"><input id="vastaus4" name="vastaus4" type="value"></label>
         </div>
-        <div class="col-md-6 border border-1 mb-5">Kysymys 5 <span id="eka5">H</span> + <span id="toka5">L</span>
-            <label for="input"><input id="vastaus5" type="value"></label>
+        <div class="col-md-6 border border-1 mb-5">Kysymys 5 =>  <span id="eka5">H</span> + <span id="toka5">L</span>
+            <label for="input"><input id="vastaus5" name="vastaus5" type="value"></label>
         </div>    
-        <div class="col-md-6 border border-1 mb-5">Kysymys 6 <span id="eka6">H</span> + <span id="toka6"> / </span> / <span id="toka7">L</span>
-            <label for="input"><input id="vastaus6" type="value"></label>
+        <div class="col-md-6 border border-1 mb-5">Kysymys 6 =>  <span id="eka6">H</span> + <span id="toka6"> / </span> / <span id="toka7">L</span>
+            <label for="input"><input id="vastaus6" name="vastaus6" type="value"></label>
         </div>                
       </div>
       <div class="vastausten-tarkistus text-center border">
